# telegram-google-calendar-notifier

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Code/: basic_classes.py  calendar.py  extension_classes.py  telegram.py  time_helpers.py  utils.py
Code/CalendarAPI/: calendar.py  helpers.py
Code/TelegramAPI/: helpers.py  telegram.py
src/: time_helpers.py  utils.py
src/calendar/: calendar.py  helpers.py
src/tele/: helpers.py  telegram.py
