[tool.poetry]
name = "telegram-google-calendar-notifier"
version = "0.1.0"
description = ""
authors = ["Artyom Sosedka <sostema@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.56.0"
schedule = "^1.1.0"
python-telegram-bot = "^13.13"
google-auth-oauthlib = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
